--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,10 +6,10 @@
                     <h3  class="text-center">Login</h3>
                 </div>
                 <div class="form-group m-4">
-                    <input formControlName="email"  class="form-control" type="text" placeholder="enter registered email">
+                    <input formControlName="email"  class="form-control" type="text" placeholder="Enter registered email">
                 </div>
                 <div class="form-group m-4">
-                    <input formControlName="password" class="form-control" type="password" placeholder="enter your password">
+                    <input formControlName="password" class="form-control" type="password" placeholder="Enter your password">
                 </div>
                 <div class="form-group m-4">
                     <button class="btn btn-primary form-control" type="submit">Login</button>
