--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
+/* styles.scss */
+@import '~bootstrap-icons/font/bootstrap-icons.css';
+
 @import 'ngx-toastr/toastr';
-.submit-button{
+
+.submit-button {
     margin-top: 120px !important;
-    
+
+}
+
+body {
+    background: linear-gradient(to bottom, #fff, violet, indigo);
+    /* width: 100%; */
+    height: 100vh;
+    /* display: flex; */
 }
