--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,12 +1,19 @@
 <div class="sidebar-wrapper">
     <div class="sidebar" [ngStyle]="{'display':showSidebar? 'block':'none'}">
-        <ul class="list-group">
-            <li class="list-group-item" routerLink="/mobiles">Mobiles</li>
-            <li class="list-group-item" routerLink="/laptops">Laptops</li>
-            <li class="list-group-item" routerLink="/clothes">Clothes</li>
-            <li class="list-group-item"routerLink="/shoes">Shoes</li>
-            <li class="list-group-item">Watches</li>
-          </ul>
+        <div class="">
+            <ul class="list-group">
+                <li class="list-group-item" routerLink="/">Home</li>
+                <li class="list-group-item" routerLink="/mobiles">Mobiles</li>
+                <li class="list-group-item" routerLink="/laptops">Laptops</li>
+                <li class="list-group-item" routerLink="/clothes">Clothes</li>
+                <li class="list-group-item" routerLink="/shoes">Shoes</li>
+                <li class="list-group-item" routerLink="/watches">Watches</li>
+                <li class="list-group-item" (click)="hanldeLogOut()">LogOut</li>
+
+            </ul>
+        </div>
+        <button class="btn btn-outline-danger close-btn rounded-0" [ngStyle]="{'display':showSidebar? 'block':'none'}"
+            (click)="handleSidebar()"><i class="bi bi-x-circle-fill"></i></button>
     </div>
-    <button class="close-btn" [ngStyle]="{'display':showSidebar? 'block':'none'}" (click)="handleSidebar()"><i class="bi bi-x-circle-fill"></i></button>
+
 </div>
