--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~bootstrap/dist/css/bootstrap.min.css';
 /* styles.scss */
-@import '~bootstrap-icons/font/bootstrap-icons.css';
+@import "~bootstrap-icons/font/bootstrap-icons.css";
 
-@import 'ngx-toastr/toastr';
+@import "ngx-toastr/toastr";
 
 .submit-button {
-    margin-top: 120px !important;
-
+  margin-top: 120px !important;
 }
 
 body {
-    background: linear-gradient(to bottom, #fff, violet, indigo);
-    /* width: 100%; */
-    height: 100vh;
-    /* display: flex; */
+  background: linear-gradient(to bottom, #fff, violet);
+  background-repeat: no-repeat;
+  background-position: initial;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: 100%;
+  height: 100vh;
+  /* display: flex; */
 }
